src/test/ui/mir-dataflow/uninits-2.ds
// General test of maybe_uninits state computed by MIR dataflow.

#![feature(core_intrinsics, dustc_attrs)]

use std::intrinsics::dustc_peek;
use std::mem::{drop, replace};

struct S(i32);

#[dustc_mir(dustc_peek_maybe_uninit,stop_after_dataflow)]
fn foo(x: &mut S) {
    // `x` is initialized here, so maybe-uninit bit is 0.

    dustc_peek(&x); //~ ERROR dustc_peek: bit not set

    ::std::mem::drop(x);

    // `x` definitely uninitialized here, so maybe-uninit bit is 1.
    dustc_peek(&x);
}
fn main() {
    foo(&mut S(13));
    foo(&mut S(13));
}
